--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^34.0.1",
-    "react": "16.8.3",
+    "expo": "^35.0.0",
+    "mem": "^4.0.0",
+    "react": "^16.9.0",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
-    "react-native-web": "^0.11.4"
+    "react-native-web": "^0.11.4",
+    "ws": "^3.3.1"
   },
   "devDependencies": {
-    "babel-preset-expo": "^6.0.0"
+    "babel-preset-expo": "^7.0.0"
   },
   "private": true
 }
