--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "expo": "^35.0.0",
-    "mem": "^4.0.0",
-    "react": "^16.9.0",
+    "mem": "^5.1.1",
+    "react": "^16.8.3",
     "react-dom": "^16.8.6",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native": "^0.59.8",
     "react-native-web": "^0.11.4",
-    "ws": "^3.3.1"
+    "react-test-renderer": "^16.9.0",
+    "ws": "^7.1.2"
   },
   "devDependencies": {
-    "babel-preset-expo": "^7.0.0"
+    "babel-preset-expo": "^7.0.0",
+    "schedule": "^0.4.0"
   },
   "private": true
 }
