--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "expo": "^35.0.0",
-    "expo-linear-gradient": "~7.0.0",
+    "expo-linear-gradient": "^7.0.1",
     "mem": "^5.1.1",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
