--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "dependencies": {
     "axios": "^0.19.0",
     "expo": "^35.0.0",
+    "expo-linear-gradient": "~7.0.0",
     "mem": "^5.1.1",
     "prop-types": "^15.7.2",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.6",
-    "react-native": "^0.59.8",
-    "react-native-web": "^0.11.4",
+    "react": "16.8.3",
+    "react-dom": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-web": "^0.11.7",
     "react-test-renderer": "^16.9.0",
     "ws": "^7.1.2"
   },
